--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@
     background-color: #333;  
     font-family: 'Roboto', sans-serif;  
 }
+h1 {
+    text-align: center;
+}
 h2 {
     color: rgb(234, 88, 117);
     text-align: center;
@@ -13,6 +16,13 @@ h2 {
 p {
     color: rgb(224, 224, 224);;
     text-align: center;
+}
+input {
+    width: 100px;
+    border: 2px solid rgb(224, 224, 224);
+    border-radius: 10px;
+    padding-left: 5px;
+    color: rgb(224, 224, 224);
 }
 .container {
    display: flex;
@@ -30,15 +40,15 @@ p {
         padding: 20px;
         PADDING-TOP: 10px;        
     }
-        #cpu-opponent, #human-opponent {
+        button {
             border: 2px solid rgb(224, 224, 224);
             height: 30px;
-            width: 80px;
+            width: 90px;
             margin-left: 10px;
             color: rgb(224, 224, 224);
             border-radius: 20px;
         }
-        #cpu-opponent:hover, #human-opponent:hover {
+        button:hover {
             border: 2px solid rgb(234, 88, 117);
             color: rgb(234, 88, 117);            
             transition: 200ms;
